--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,6 @@ body {
   width: 300px;
 }
 
-
 .movie-card-image {
   width: 100%;
 }
@@ -80,4 +79,25 @@ body {
   display: flex;
   justify-content: flex-end;
   padding: 12px 20px;
+}
+
+.main-movie-library {
+  display: flex;
+  flex-flow: row wrap;
+  flex-direction: column;
+  /* align-items: center; */
+  margin: 30px 0;
+}
+
+.main-form {
+  display: flex;
+  flex-flow: column;
+  margin: 30px 0;
+  padding: 40px;
+}
+
+.main-form-searchBar {
+  display: flex;
+  flex-flow: column;
+  margin: 30px;
 }
